--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
   <body>
     <p>Radio check. Pilot, please confirm.</p>
+    <p>Good comms.  Request clearance at 20,000 ft.</p>
   </body>
 </html>
