--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <p>Radio check. Pilot, please confirm.</p>
-    <p>Good comms.  Request clearance at 20,000 ft.</p>
+    <p>Good comms. Request clearance at 20,000 ft.</p>
+    <p>Pilot, you are clear, Over.</p>
   </body>
 </html>
