--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <p>Radio check. Pilot, please confirm.</p>
     <p>Good comms. Request clearance at 20,000 ft.</p>
     <p>Pilot, you are clear, Over.</p>
+    <p>We have entered some cloud and have no visibility.</p>
   </body>
 </html>
