--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <!DOCTYPE html>
+<html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
   <body>
     <p>Radio check. Pilot, please confirm.</p>
     <p>Good comms. Request clearance at 20,000 ft.</p>
