--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <p>Good comms. Request clearance at 20,000 ft.</p>
     <p>Pilot, you are clear, Over.</p>
     <p>We have entered some cloud and have no visibility.</p>
+    <p>Pilot, you are still showing on our instruments, proceed. Over</p>
   </body>
 </html>
